[tool.poetry]
name = "token_middleware"
version = "1.0.1"
description = ""
authors = ["Amil <amilalizada@gmail.com>"]

homepage = "https://github.com/amilalizada/auth_middleware"
repository = "https://github.com/amilalizada/auth_middleware"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "middleware", from = "." },
]
[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.45.3"
fastapi = "^0.115.7"
aiohttp = "^3.11.11"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
uvicorn = "^0.34.0"
flake8 = "^7.1.1"

