[tool.poetry]
name = "fastapi-auth-gateway"
version = "1.2.2"
description = "FastAPI Auth Gateway"
authors = ["Amil <amilalizada@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amilalizada/fastapi-auth-gateway"
repository = "https://github.com/amilalizada/fastapi-auth-gateway"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.45.3"
fastapi = "^0.115.7"
aiohttp = "^3.11.11"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
uvicorn = "^0.34.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
py_version=39
skip_glob = [".github/*", ".venv/*", "venv/*", ".vscode/*"]
skip = [".gitignore", ".md", ".yaml", ".yml", ".lock",".toml"]

